--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <header class="app-header">
   <div class="header-left">
-    <img src="assets/logos/coarp.png" alt="COARP" class="header-logo">
     <span class="header-title">Checklist Operacional RPAS</span>
   </div>
   <div class="header-right">
@@ -53,20 +52,56 @@
 <section id="phase1" class="screen">
   <h2>Fase 1 – Preparação para o Voo</h2>
   <form id="phase1Form" class="checklist">
-    <p class="placeholder">
-      Checklist oficial carregado nesta fase.
-    </p>
+    <label><input type="checkbox"> Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação</label>
+    <label><input type="checkbox"> Criação/manutenção/Login conta DJI conectando o celular no controle como roteador</label>
+    <label><input type="checkbox"> Controle de Integridade Física da Aeronave</label>
+    <label><input type="checkbox"> Manusear a aeronave com mão dupla e não segurar pelas hastes</label>
+    <label><input type="checkbox"> Verificar shell (estrutura), braços (hastes), integridade das hélices, rotor/estator</label>
+    <label><input type="checkbox"> Verificar/carregar bateria do controle e a que estará no drone</label>
+    <label><input type="checkbox"> Abertura dos braços de sustentação</label>
+    <label><input type="checkbox"> Inserir cartão microSD compatível conforme fabricante</label>
+    <label><input type="checkbox"> Fixação correta das hélices</label>
+    <label><input type="checkbox"> Inserir bateria corretamente e preservar trava</label>
+    <label><input type="checkbox"> Posicionar aeronave em local seguro para decolagem</label>
+    <label><input type="checkbox"> Abrir antenas do controle para frente</label>
+    <label><input type="checkbox"> Ligar o rádio controle primeiro</label>
+    <label><input type="checkbox"> Retirada da tampa/trava do gimbal</label>
+    <label><input type="checkbox"> Ligar a aeronave com cuidado para não forçar as hastes</label>
+    <label><input type="checkbox"> Verificar necessidade de atualizações</label>
+    <label><input type="checkbox"> Verificar Aircraft Status e corrigir erros (COMPASS/IMU)</label>
+    <label><input type="checkbox"> Configurar altura do RTH</label>
+    <label><input type="checkbox"> Configurar altura e distância limites</label>
+    <label><input type="checkbox"> Configurar ação em caso de perda de sinal</label>
+    <label><input type="checkbox"> Configurar ação para CRITICAL LOW BATTERY</label>
+    <label><input type="checkbox"> Confirmar recepção mínima de 12 satélites</label>
+    <label><input type="checkbox"> Confirmar HOMEPOINT no mapa</label>
+    <label><input type="checkbox"> Posicionar drone e piloto corretamente para teste</label>
+    <label><input type="checkbox"> Acionar motores</label>
+    <label><input type="checkbox"> Realizar varredura holística 360°</label>
+    <label><input type="checkbox"> Decolar e testar comandos básicos</label>
+    <label><input type="checkbox"> Pousar aeronave e cortar motores</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <!-- FASE 2 -->
 <section id="phase2" class="screen">
-  <h2>Fase 2 – Prevoo</h2>
+  <h2>Fase 2 – Prevoo (Local da Missão)</h2>
   <form id="phase2Form" class="checklist">
-    <p class="placeholder">
-      Checklist oficial carregado nesta fase.
-    </p>
+    <label><input type="checkbox"> Confirmar condições climáticas</label>
+    <label><input type="checkbox"> Planejar visualmente a trajetória de voo e retorno</label>
+    <label><input type="checkbox"> Confirmar integridade física e ambiente seguro</label>
+    <label><input type="checkbox"> Confirmar baterias carregadas (drone, controle, celular)</label>
+    <label><input type="checkbox"> Confirmar cartões de memória</label>
+    <label><input type="checkbox"> Fixação correta das hélices</label>
+    <label><input type="checkbox"> Retirada da tampa do gimbal</label>
+    <label><input type="checkbox"> Inserção correta da bateria</label>
+    <label><input type="checkbox"> Posicionar aeronave em local seguro</label>
+    <label><input type="checkbox"> Ligar controle e aeronave</label>
+    <label><input type="checkbox"> Configurar RTH e limites</label>
+    <label><input type="checkbox"> Confirmar satélites e HOMEPOINT</label>
+    <label><input type="checkbox"> Avisar equipe sobre decolagem</label>
+    <label><input type="checkbox"> Acionar motores</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
@@ -75,31 +110,41 @@
 <section id="phase3" class="screen">
   <h2>Fase 3 – Voo da Aeronave</h2>
   <form id="phase3Form" class="checklist">
-    <p class="placeholder">
-      Checklist oficial carregado nesta fase.
-    </p>
+    <label><input type="checkbox"> Manter vigilância de aeronaves tripuladas</label>
+    <label><input type="checkbox"> Pousar imediatamente em caso de aproximação</label>
+    <label><input type="checkbox"> Monitorar condições climáticas</label>
+    <label><input type="checkbox"> Atenção a obstáculos, pássaros e fios</label>
+    <label><input type="checkbox"> Avisar equipe sobre pouso</label>
+    <label><input type="checkbox"> Pousar com retaguarda voltada ao piloto</label>
+    <label><input type="checkbox"> Cortar motores</label>
+    <label><input type="checkbox"> Desligar aeronave e controle</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <!-- FASE 4 -->
 <section id="phase4" class="screen">
-  <h2>Fase 4 – Pós-Voo da Aeronave</h2>
+  <h2>Fase 4 – Pós-Voo</h2>
   <form id="phase4Form" class="checklist">
-    <p class="placeholder">
-      Checklist oficial carregado nesta fase.
-    </p>
+    <label><input type="checkbox"> Retirar bateria</label>
+    <label><input type="checkbox"> Colocar trava do gimbal</label>
+    <label><input type="checkbox"> Guardar aeronave</label>
+    <label><input type="checkbox"> Retirar cartão de memória</label>
+    <label><input type="checkbox"> Verificar integridade pós-voo</label>
+    <label><input type="checkbox"> Comunicar encerramento à equipe</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <!-- FASE 5 -->
 <section id="phase5" class="screen">
-  <h2>Fase 5 – Pós-Missão / Encerramento</h2>
+  <h2>Fase 5 – Pós-Missão</h2>
   <form id="phase5Form" class="checklist">
-    <p class="placeholder">
-      Checklist oficial carregado nesta fase.
-    </p>
+    <label><input type="checkbox"> Garantir guarda segura das imagens</label>
+    <label><input type="checkbox"> Registrar missão</label>
+    <label><input type="checkbox"> Informar chefia</label>
+    <label><input type="checkbox"> Registrar intercorrências</label>
+    <label><input type="checkbox"> Encerrar missão</label>
     <button type="submit">Finalizar Checklist</button>
   </form>
 </section>
