--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Checklist Operacional RPAS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png?v=2">
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
 </head>
 
 <body>
@@ -53,72 +53,72 @@
 <section id="phase1" class="screen">
   <h2>Fase 1 – Preparação para o Voo</h2>
   <form id="phase1Form" class="checklist">
-    <label><input type="checkbox"> Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação</label>
-    <label><input type="checkbox"> Criação/manutenção/Login conta DJI conectando o celular no controle como roteador</label>
-    <label><input type="checkbox"> Controle de Integridade Física da Aeronave</label>
-    <label><input type="checkbox"> Manusear a aeronave com mão dupla e não segurar pelas hastes</label>
-    <label><input type="checkbox"> Verificar shell (estrutura), braços (hastes), integridade das hélices, rotor/estator</label>
-    <label><input type="checkbox"> Verificar/carregar bateria do controle e a que estará no drone</label>
-    <label><input type="checkbox"> Abertura dos braços de sustentação</label>
-    <label><input type="checkbox"> Inserir cartão microSD compatível conforme fabricante</label>
-    <label><input type="checkbox"> Fixação correta das hélices</label>
-    <label><input type="checkbox"> Inserir bateria corretamente e preservar trava</label>
-    <label><input type="checkbox"> Posicionar aeronave em local seguro para decolagem</label>
-    <label><input type="checkbox"> Abrir antenas do controle para frente</label>
-    <label><input type="checkbox"> Ligar o rádio controle primeiro</label>
-    <label><input type="checkbox"> Retirada da tampa/trava do gimbal</label>
-    <label><input type="checkbox"> Ligar a aeronave com cuidado para não forçar as hastes</label>
-    <label><input type="checkbox"> Verificar necessidade de atualizações</label>
-    <label><input type="checkbox"> Verificar Aircraft Status e corrigir erros (COMPASS/IMU)</label>
-    <label><input type="checkbox"> Configurar altura do RTH</label>
-    <label><input type="checkbox"> Configurar altura e distância limites</label>
-    <label><input type="checkbox"> Configurar ação em caso de perda de sinal</label>
-    <label><input type="checkbox"> Configurar ação para CRITICAL LOW BATTERY</label>
-    <label><input type="checkbox"> Confirmar recepção mínima de 12 satélites</label>
-    <label><input type="checkbox"> Confirmar HOMEPOINT no mapa</label>
-    <label><input type="checkbox"> Posicionar drone e piloto corretamente para teste</label>
-    <label><input type="checkbox"> Acionar motores</label>
-    <label><input type="checkbox"> Realizar varredura holística 360°</label>
-    <label><input type="checkbox"> Decolar e testar comandos básicos</label>
-    <label><input type="checkbox"> Pousar aeronave e cortar motores</label>
+    <label><input type="checkbox"> Itens de Conforto</label>
+    <label><input type="checkbox"> Login conta DJI</label>
+    <label><input type="checkbox"> Integridade física da aeronave</label>
+    <label><input type="checkbox"> Manuseio correto</label>
+    <label><input type="checkbox"> Verificação estrutural</label>
+    <label><input type="checkbox"> Baterias carregadas</label>
+    <label><input type="checkbox"> Braços abertos</label>
+    <label><input type="checkbox"> Cartão microSD</label>
+    <label><input type="checkbox"> Hélices fixadas</label>
+    <label><input type="checkbox"> Bateria inserida</label>
+    <label><input type="checkbox"> Local seguro</label>
+    <label><input type="checkbox"> Antenas posicionadas</label>
+    <label><input type="checkbox"> Rádio controle ligado</label>
+    <label><input type="checkbox"> Tampa do gimbal retirada</label>
+    <label><input type="checkbox"> Aeronave ligada</label>
+    <label><input type="checkbox"> Atualizações verificadas</label>
+    <label><input type="checkbox"> Status da aeronave</label>
+    <label><input type="checkbox"> Altura RTH</label>
+    <label><input type="checkbox"> Limites configurados</label>
+    <label><input type="checkbox"> Perda de sinal</label>
+    <label><input type="checkbox"> Low battery</label>
+    <label><input type="checkbox"> Satélites</label>
+    <label><input type="checkbox"> Homepoint</label>
+    <label><input type="checkbox"> Posição piloto/drone</label>
+    <label><input type="checkbox"> Motores acionados</label>
+    <label><input type="checkbox"> Varredura 360°</label>
+    <label><input type="checkbox"> Teste de comandos</label>
+    <label><input type="checkbox"> Pouso e corte</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <!-- FASE 2 -->
 <section id="phase2" class="screen">
-  <h2>Fase 2 – Prevoo (Local da Missão)</h2>
+  <h2>Fase 2 – Prevoo</h2>
   <form id="phase2Form" class="checklist">
-    <label><input type="checkbox"> Confirmar condições climáticas</label>
-    <label><input type="checkbox"> Planejar visualmente a trajetória de voo e retorno</label>
-    <label><input type="checkbox"> Confirmar integridade física e ambiente seguro</label>
-    <label><input type="checkbox"> Confirmar baterias carregadas (drone, controle, celular)</label>
-    <label><input type="checkbox"> Confirmar cartões de memória</label>
-    <label><input type="checkbox"> Fixação correta das hélices</label>
-    <label><input type="checkbox"> Retirada da tampa do gimbal</label>
-    <label><input type="checkbox"> Inserção correta da bateria</label>
-    <label><input type="checkbox"> Posicionar aeronave em local seguro</label>
-    <label><input type="checkbox"> Ligar controle e aeronave</label>
-    <label><input type="checkbox"> Configurar RTH e limites</label>
-    <label><input type="checkbox"> Confirmar satélites e HOMEPOINT</label>
-    <label><input type="checkbox"> Avisar equipe sobre decolagem</label>
-    <label><input type="checkbox"> Acionar motores</label>
+    <label><input type="checkbox"> Clima</label>
+    <label><input type="checkbox"> Trajetória</label>
+    <label><input type="checkbox"> Ambiente seguro</label>
+    <label><input type="checkbox"> Baterias</label>
+    <label><input type="checkbox"> Cartões</label>
+    <label><input type="checkbox"> Hélices</label>
+    <label><input type="checkbox"> Tampa do gimbal</label>
+    <label><input type="checkbox"> Bateria</label>
+    <label><input type="checkbox"> Local seguro</label>
+    <label><input type="checkbox"> Ligar equipamentos</label>
+    <label><input type="checkbox"> RTH</label>
+    <label><input type="checkbox"> Satélites</label>
+    <label><input type="checkbox"> Aviso equipe</label>
+    <label><input type="checkbox"> Motores</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <!-- FASE 3 -->
 <section id="phase3" class="screen">
-  <h2>Fase 3 – Voo da Aeronave</h2>
+  <h2>Fase 3 – Voo</h2>
   <form id="phase3Form" class="checklist">
-    <label><input type="checkbox"> Manter vigilância de aeronaves tripuladas</label>
-    <label><input type="checkbox"> Pousar imediatamente em caso de aproximação</label>
-    <label><input type="checkbox"> Monitorar condições climáticas</label>
-    <label><input type="checkbox"> Atenção a obstáculos, pássaros e fios</label>
-    <label><input type="checkbox"> Avisar equipe sobre pouso</label>
-    <label><input type="checkbox"> Pousar com retaguarda voltada ao piloto</label>
-    <label><input type="checkbox"> Cortar motores</label>
-    <label><input type="checkbox"> Desligar aeronave e controle</label>
+    <label><input type="checkbox"> Vigilância aérea</label>
+    <label><input type="checkbox"> Aproximação</label>
+    <label><input type="checkbox"> Clima</label>
+    <label><input type="checkbox"> Obstáculos</label>
+    <label><input type="checkbox"> Aviso pouso</label>
+    <label><input type="checkbox"> Pouso correto</label>
+    <label><input type="checkbox"> Corte motores</label>
+    <label><input type="checkbox"> Desligamento</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
@@ -128,11 +128,11 @@
   <h2>Fase 4 – Pós-Voo</h2>
   <form id="phase4Form" class="checklist">
     <label><input type="checkbox"> Retirar bateria</label>
-    <label><input type="checkbox"> Colocar trava do gimbal</label>
+    <label><input type="checkbox"> Trava do gimbal</label>
     <label><input type="checkbox"> Guardar aeronave</label>
-    <label><input type="checkbox"> Retirar cartão de memória</label>
-    <label><input type="checkbox"> Verificar integridade pós-voo</label>
-    <label><input type="checkbox"> Comunicar encerramento à equipe</label>
+    <label><input type="checkbox"> Cartão</label>
+    <label><input type="checkbox"> Integridade</label>
+    <label><input type="checkbox"> Comunicação</label>
     <button type="submit">Avançar</button>
   </form>
 </section>
@@ -141,10 +141,10 @@
 <section id="phase5" class="screen">
   <h2>Fase 5 – Pós-Missão</h2>
   <form id="phase5Form" class="checklist">
-    <label><input type="checkbox"> Garantir guarda segura das imagens</label>
-    <label><input type="checkbox"> Registrar missão</label>
-    <label><input type="checkbox"> Informar chefia</label>
-    <label><input type="checkbox"> Registrar intercorrências</label>
+    <label><input type="checkbox"> Guarda imagens</label>
+    <label><input type="checkbox"> Registro</label>
+    <label><input type="checkbox"> Chefia</label>
+    <label><input type="checkbox"> Intercorrências</label>
     <label><input type="checkbox"> Encerrar missão</label>
     <button type="submit">Finalizar Checklist</button>
   </form>
@@ -153,22 +153,34 @@
 <!-- FINAL – ASSINATURA -->
 <section id="pdfScreen" class="screen">
   <h2>Encerramento do Checklist</h2>
-
-  <p>
-    Declaro que executei integralmente o checklist operacional RPAS conforme
-    a doutrina vigente da Polícia Civil de Santa Catarina.
-  </p>
-
   <form id="signatureForm">
     <input id="signatureName" placeholder="Nome do Operador" required>
     <input id="signatureId" placeholder="Matrícula Funcional" required>
-
     <label class="signature-check">
       <input type="checkbox" id="signatureConfirm" required>
-      Confirmo a veracidade das informações acima
+      Confirmo a veracidade das informações
     </label>
-
     <button type="submit">Assinar e Gerar PDF</button>
+  </form>
+</section>
+
+<!-- 🟥 FASE 1.2 – ENCERRAMENTO ANTECIPADO -->
+<section id="earlyEndScreen" class="screen">
+  <h2>Encerramento Antecipado do Checklist</h2>
+  <p>
+    O encerramento antecipado do checklist deverá ser devidamente
+    justificado e ficará registrado para fins administrativos e de auditoria.
+  </p>
+  <form id="earlyEndForm">
+    <textarea id="earlyEndReason"
+      placeholder="Descreva o motivo do encerramento antecipado"
+      rows="5"
+      required></textarea>
+    <label class="signature-check">
+      <input type="checkbox" id="earlyEndConfirm" required>
+      Confirmo o encerramento antecipado
+    </label>
+    <button type="submit">Confirmar Encerramento</button>
   </form>
 </section>
 
@@ -179,16 +191,10 @@
 <script>
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
-      navigator.serviceWorker
-        .register("./service-worker.js")
-        .then(reg => {
-          console.log("Service Worker registrado:", reg.scope);
-        })
-        .catch(err => {
-          console.error("Falha ao registrar Service Worker:", err);
-        });
+      navigator.serviceWorker.register("./service-worker.js");
     });
   }
 </script>
+
 </body>
 </html>
