--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <label><input type="checkbox"> Teste de comandos</label>
     <label><input type="checkbox"> Pouso e corte</label>
     <button type="submit">Avançar</button>
+    <button type="button" class="btn-secondary"
+      onclick="goToEarlyEnd('phase1')">Encerrar checklist</button>
   </form>
 </section>
 
@@ -104,6 +106,8 @@
     <label><input type="checkbox"> Aviso equipe</label>
     <label><input type="checkbox"> Motores</label>
     <button type="submit">Avançar</button>
+    <button type="button" class="btn-secondary"
+      onclick="goToEarlyEnd('phase2')">Encerrar checklist</button>
   </form>
 </section>
 
@@ -120,6 +124,8 @@
     <label><input type="checkbox"> Corte motores</label>
     <label><input type="checkbox"> Desligamento</label>
     <button type="submit">Avançar</button>
+    <button type="button" class="btn-secondary"
+      onclick="goToEarlyEnd('phase3')">Encerrar checklist</button>
   </form>
 </section>
 
@@ -134,6 +140,8 @@
     <label><input type="checkbox"> Integridade</label>
     <label><input type="checkbox"> Comunicação</label>
     <button type="submit">Avançar</button>
+    <button type="button" class="btn-secondary"
+      onclick="goToEarlyEnd('phase4')">Encerrar checklist</button>
   </form>
 </section>
 
@@ -147,6 +155,8 @@
     <label><input type="checkbox"> Intercorrências</label>
     <label><input type="checkbox"> Encerrar missão</label>
     <button type="submit">Finalizar Checklist</button>
+    <button type="button" class="btn-secondary"
+      onclick="goToEarlyEnd('phase5')">Encerrar checklist</button>
   </form>
 </section>
 
